# stock_watcher

./: TODO  docker-compose.yaml  pyproject.toml  stock_builder.py  stock_data.py  stock_fetch.py  stock_tickers.py  stock_utils.py  stock_watcher.dockerfile
config/: config.yaml
libs/protobufs/: stock_record.proto
projects/stock_email_service/: pyproject.toml  stock_email_serivce.dockerfile
projects/stock_email_service/config/: __init__.py
projects/stock_watcher/: stock_builder.py  stock_data.py  stock_utils.py  stock_watcher.dockerfile
projects/stock_watcher/config/: config.yaml
sample_data/: data.txt  news.json  stream.json
