[tool.poetry]
name = "stock-watcher"
version = "0.1.0"
description = "Subscribe, get alerts and analysis of all your favourite stocks."
authors = ["cs"]
readme = "README.md"
packages = [{include = "stock_watcher"}]

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^22.2.0"
yfinance = "^0.2.18"
confluent-kafka = "^2.1.1"
fastavro = "^1.7.4"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
